--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -365,6 +365,8 @@
         <li><a href="./story/256.html">Xu Qi'an: I've Contributed Again</a></li>
         <li><a href="./story/257.html">Inquiry</a></li>
         <li><a href="./story/258.html">Bring Honour to the Family</a></li>
+        <li><a href="./story/259.html">Leave the Capital</a></li>
+        <li><a href="./story/260.html">Master of Prophecy</a></li>
     </ol>
 
     <hr>
