--- a/dagengren/story/257.html
+++ b/dagengren/story/257.html
@@ -47,7 +47,7 @@ Feeling light-hearted, Wei Yuan returned to the tea room and personally poured t
 
 *Outer meridians… oh, he's referring to the temples.*
 
-Xu Qi'an was momentarily puzzled before realizing that the "Outer meridians" referred to what he knew as the temples—though in this world, there was no such term as "temples."
+Xu Qi'an was momentarily puzzled before realising that the "Outer meridians" referred to what he knew as the temples—though in this world, there was no such term as "temples."
 
 *"Outer meridians" sounds so much more high-class and sophisticated…* Xu Qi'an never really liked the term "temples" anyway, as it always felt more like a verb to him.[^1]
 
@@ -89,7 +89,7 @@ Meanwhile, Xu Lingyin stood beside the cauldron, tears flowing from the corners 
 
 Wei Yuan unfolded a piece of paper and wrote the words "Mixed Primordial Art" on it. He then said, "The Nightwatchers' most advanced technique is called the Mixed Primordial Art. Every Gold Gong uses this technique. If this were to be leaked to the Jianghu, it would cause a storm of bloodshed."
 
-Once again, Xu Qi'an realized the immense benefits of working under Wei Yuan and joining the Nightwatchers. Here, he had access to the finest techniques and the most luxurious resources—things that wandering martial artists could only dream of. For Xu Qi'an, they were readily available.
+Once again, Xu Qi'an realised the immense benefits of working under Wei Yuan and joining the Nightwatchers. Here, he had access to the finest techniques and the most luxurious resources—things that wandering martial artists could only dream of. For Xu Qi'an, they were readily available.
 
 Including that visualisation drawing—it, too, was top-tier.
 
@@ -145,7 +145,7 @@ If he wanted to go further, the only way was through dual cultivation with the N
 
 Leaving the bedchamber, he boarded his dragon palanquin, urging the bearers along. Before long, they arrived at Lingbao Temple.
 
-But when he saw the National Teacher, a woman, his hopes were dashed as he realized that she had merely invited him for their usual meditation, much like their previous practice sessions.
+But when he saw the National Teacher, a woman, his hopes were dashed as he realised that she had merely invited him for their usual meditation, much like their previous practice sessions.
 
 The female National Teacher, with a vermillion dot between her brows, her features as delicate as a painting, sat cross-legged on a prayer cushion. Her soft voice rang out, "Your Majesty, please sit."
 
