--- a/dagengren/story/258.html
+++ b/dagengren/story/258.html
@@ -89,7 +89,7 @@ The elderly eunuch acknowledged the order and slowly withdrew from the bedchambe
 
 The elderly eunuch, accompanied by a squad of guards, walked through the palace walls, bathed in the waning light of the setting sun, arriving at Jingxiu Palace.
 
-A eunuch stationed at the entrance recognized the elderly eunuch from a distance and hurried over, saying, “Please wait, I will inform Consort Chen…”
+A eunuch stationed at the entrance recognised the elderly eunuch from a distance and hurried over, saying, “Please wait, I will inform Consort Chen…”
 
 “We’re in a hurry.” The elderly eunuch slapped him aside and led the guards into the courtyard. As they approached the inner chambers, they could hear sobbing coming from inside.
 
@@ -205,9 +205,9 @@ Wei Yuan proceeded to tell the court a carefully crafted story:
 
 Palace maid Huang Xiaorou was violated by the Imperial Uncle, resulting in an unwanted pregnancy. After secretly undergoing an abortion, she harbored a deep grudge and silently waited for years before plotting her revenge. Using her position as a maid close to Consort Fu, she tampered with the railings of the observation tower. When the time was right, she tricked the Crown Prince into Qingfeng Hall, setting in motion one of the most shocking conspiracies the harem had seen in over a decade.
 
-Upon learning of the plot against Consort Fu and realizing that Huang Xiaorou was involved, the Imperial Uncle, fearing his vile actions would be exposed, sought refuge with the Empress. Only then did the Empress learn of the heinous acts her brother had committed. Out of familial love, she tearfully took responsibility for his crimes.
+Upon learning of the plot against Consort Fu and realising that Huang Xiaorou was involved, the Imperial Uncle, fearing his vile actions would be exposed, sought refuge with the Empress. Only then did the Empress learn of the heinous acts her brother had committed. Out of familial love, she tearfully took responsibility for his crimes.
 
-Finally, Wei Yuan summarized the case: "This is how the events unfolded. The Imperial Uncle has already confessed. Your Majesty may interrogate him at any time."
+Finally, Wei Yuan summarised the case: "This is how the events unfolded. The Imperial Uncle has already confessed. Your Majesty may interrogate him at any time."
 
 "Nonsense!" The Minister of the High Court snorted coldly, bowing to the emperor. "Your Majesty, according to what I know, Huang Xiaorou was murdered. If she were truly the mastermind, then where is the murderer?"
 
@@ -215,7 +215,7 @@ The ministers echoed his sentiments.
 
 Without a change in his expression, Wei Yuan calmly explained, "Huang Xiaorou had accomplices who helped her carry out the plot, framing the Crown Prince and indirectly implicating the Empress."
 
-Hearing this, many ministers were struck with a sudden realization, and they began to piece together their own theories.
+Hearing this, many ministers were struck with a sudden realisation, and they began to piece together their own theories.
 
 Had it not been for the revelation about the Imperial Uncle's abuse of Huang Xiaorou, everyone would have assumed that the Empress had confessed because the evidence was irrefutable.
 
@@ -279,7 +279,7 @@ The day after the conclusion of the Noble Consort Fu case, Xu Qi’an finally re
 
 This was a horse with a troubled destiny. After narrowly escaping death that day, it had run off in panic. As it galloped through the city, it was spotted by the *Yudao* City Guards patrolling the streets.
 
-Seeing the branding on the horse’s flank, the guards immediately recognized it as one of their own and brought it back to their garrison.
+Seeing the branding on the horse’s flank, the guards immediately recognised it as one of their own and brought it back to their garrison.
 
 Indeed, this mare was a military horse used by the City Guards. Xu Qi’an’s second uncle had obtained it through his connections at a discounted price. After owning it for only a few years, he had passed it on to his nephew.
 
