--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -367,6 +367,8 @@
         <li><a href="./story/258.html">Bring Honour to the Family</a></li>
         <li><a href="./story/259.html">Leave the Capital</a></li>
         <li><a href="./story/260.html">Master of Prophecy</a></li>
+        <li><a href="./story/261.html">Guessing Topics</a></li>
+        <li><a href="./story/262.html">Two Poems</a></li>
     </ol>
 
     <hr>
