--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -369,6 +369,7 @@
         <li><a href="./story/260.html">Master of Prophecy</a></li>
         <li><a href="./story/261.html">Guessing Topics</a></li>
         <li><a href="./story/262.html">Two Poems</a></li>
+        <li><a href="./story/263.html"># 263. Xu Xinnian: I'm Meeting a lot of Nutcases this Year</a></li>
     </ol>
 
     <hr>
