--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             </li>
         </ul>
 
-        <h3>旧作 Old Projects</h3>
+        <!-- <h3>旧作 Old Projects</h3>
 
         <ul>
             <li>
                 <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (暂止)
             </li>
-        </ul>
+        </ul> -->
 
         <!-- <footer>
 
