--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -369,7 +369,10 @@
         <li><a href="./story/260.html">Master of Prophecy</a></li>
         <li><a href="./story/261.html">Guessing Topics</a></li>
         <li><a href="./story/262.html">Two Poems</a></li>
-        <li><a href="./story/263.html"># 263. Xu Xinnian: I'm Meeting a lot of Nutcases this Year</a></li>
+        <li><a href="./story/263.html">Xu Xinnian: I'm Meeting a lot of Nutcases this Year</a></li>
+        <li><a href="./story/264.html">Two Brothers Two Talents</a></li>
+        <li><a href="./story/265.html">Pot-Carrying Hero </a></li>
+        <li><a href="./story/266.html">Chu Yuanzhen: Do You Need Me to Withdraw</a></li>
     </ol>
 
     <hr>
