--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -373,12 +373,16 @@
         <li><a href="./story/264.html">Two Brothers Two Talents</a></li>
         <li><a href="./story/265.html">Pot-Carrying Hero </a></li>
         <li><a href="./story/266.html">Chu Yuanzhen: Do You Need Me to Withdraw</a></li>
+        <li><a href="./story/267.html">Xu Qi'an's Ultimate Skill</a></li>
+        <li><a href="./story/268.html">Number Five's Message</a></li>
     </ol>
 
     <hr>
 
     <p>
-        【谢】Many thanks to: <i>Fear</i> and <i>God</i> for your support!【谢】
+        <b>【 功 德 碑 】</b> <br>
+        Fear 貳拾 ❂ TendouKurou 肆 ❂ Laxarus 貳拾 
+        <br><b>【 功 德 碑 】</b>
     </p>
 
     <footer>
