--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -375,6 +375,8 @@
         <li><a href="./story/266.html">Chu Yuanzhen: Do You Need Me to Withdraw</a></li>
         <li><a href="./story/267.html">Xu Qi'an's Ultimate Skill</a></li>
         <li><a href="./story/268.html">Number Five's Message</a></li>
+        <li><a href="./story/269.html">The Last Day of the Exams</a></li>
+        <li><a href="./story/270.html">End of the Spring Exams</a></li>
     </ol>
 
     <hr>
