--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -377,6 +377,7 @@
         <li><a href="./story/268.html">Number Five's Message</a></li>
         <li><a href="./story/269.html">The Last Day of the Exams</a></li>
         <li><a href="./story/270.html">End of the Spring Exams</a></li>
+        <li><a href="./story/271.html">Princess Lin'an's Life-Threatening Situation</a></li>
     </ol>
 
     <hr>
