--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -378,6 +378,8 @@
         <li><a href="./story/269.html">The Last Day of the Exams</a></li>
         <li><a href="./story/270.html">End of the Spring Exams</a></li>
         <li><a href="./story/271.html">Princess Lin'an's Life-Threatening Situation</a></li>
+        <li><a href="./story/272.html">Another Purse</a></li>
+        <li><a href="./story/273.html">Challenge a Silver Gong</a></li>
     </ol>
 
     <hr>
