--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -380,6 +380,8 @@
         <li><a href="./story/271.html">Princess Lin'an's Life-Threatening Situation</a></li>
         <li><a href="./story/272.html">Another Purse</a></li>
         <li><a href="./story/273.html">Challenge a Silver Gong</a></li>
+        <li><a href="./story/274.html">Thief!</a></li>
+        <li><a href="./story/275.html">Another Person</a></li>
     </ol>
 
     <hr>
