--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -382,6 +382,8 @@
         <li><a href="./story/273.html">Challenge a Silver Gong</a></li>
         <li><a href="./story/274.html">Thief!</a></li>
         <li><a href="./story/275.html">Another Person</a></li>
+        <li><a href="./story/276.html">Bail</a></li>
+        <li><a href="./story/277.html">Zhong Li the Worker</a></li>
     </ol>
 
     <hr>
