--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -384,6 +384,8 @@
         <li><a href="./story/275.html">Another Person</a></li>
         <li><a href="./story/276.html">Bail</a></li>
         <li><a href="./story/277.html">Zhong Li the Worker</a></li>
+        <li><a href="./story/278.html">Reveal the List</a></li>
+        <li><a href="./story/279.html">Can’t Bring Myself to Cut Your Head Off</a></li>
     </ol>
 
     <hr>
