--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -92,6 +92,10 @@
         <li><a href="./story/43.html">【半年在李】</a></li>
         <li><a href="./story/44.html">【冬至】</a></li>
         <li><a href="./story/45.html">【姚师宝书】</a></li>
+        <li><a href="./story/46.html">【龙公子（上）】</a></li>
+        <li><a href="./story/47.html">【龙公子（中）】</a></li>
+        <li><a href="./story/48.html">【龙公子（下）】</a></li>
+        <li><a href="./story/49.html">【龙威】</a></li>
     </ol>
 
 </div>
