--- a/baoyu/story/18.html
+++ b/baoyu/story/18.html
@@ -37,7 +37,7 @@
 
 所以他漫步往那小院子去，很快听闻讲道声，进院见白衣道士在对众新弟子讲道——也不是什么大自然的奥妙，至少阳忠等人不认为是，而是普普通通的凡人道士会讲的。见阳忠来，白衣道士微笑点头，略微举了下手中的道经以为行礼，而后继续讲话。周围除了他一位长辈，没其他人。
 
-那些新弟子一大半都难掩饰他们的无聊，毕竟大半都是武夫，武夫哪管什么非有道不可言，不可言即道等无聊事啊，那些炼法士则听得更专注一点，但只是一点，因为那道士说的与施法御自然没明显的关系。
+那些新弟子一大半都难掩饰他们的无聊，毕竟大半都是武夫，武夫哪管什么「非有道不可言，不可言即道」等无聊事啊，那些炼法士则听得更专注一点，但只是一点，因为那道士说的与施法御自然没明显的关系。[^1]
 
 可毕竟都是道家人，显然师祖们就请了谢道人来讲一讲。
 
@@ -134,6 +134,10 @@
 「回去就报，」廉师祖的语气又忽然变回那种轻漂漂的了，「所以啊青启哥你得帮我一下哦，毕竟金丹还有自己事，应该是执事负责看新弟子的。」
 
 「诶好了好了好了！」陆师祖摆摆手，随后用一种很冰冷的语气对阳忠等人道：「那，你们已见海上之不安，勿擅自闯荡，否则死得冤枉！」
+
+-----
+
+[^1]: 《关尹子》
     </div>
 
     <div class="double" id="footer">
