--- a/baoyu/story/37.html
+++ b/baoyu/story/37.html
@@ -159,14 +159,13 @@
 
 当他们来到了「奥君路」，这个车站牌也是双语的，结构如下：
 
-> 路 君 奧【綫海關】    
+> 路 君 奧【綫海關】[^2]    
 > AUGUSTUS ROAD
 
 -----
 
-章尾略语：想必贵读者已知西夷多貌欧州，故若东州中原以汉语为话，山外古国则以英、法、俄等各言表之。
-
-[^1]: 平声    
+[^1]: 平声     
+[^2]: 传统牌子，右到左读
 
 
 
