--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -386,6 +386,7 @@
         <li><a href="./story/277.html">Zhong Li the Worker</a></li>
         <li><a href="./story/278.html">Reveal the List</a></li>
         <li><a href="./story/279.html">Can’t Bring Myself to Cut Your Head Off</a></li>
+        <li><a href="./story/280.html">A Poem</a></li>
     </ol>
 
     <hr>
