--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -387,6 +387,7 @@
         <li><a href="./story/278.html">Reveal the List</a></li>
         <li><a href="./story/279.html">Can’t Bring Myself to Cut Your Head Off</a></li>
         <li><a href="./story/280.html">A Poem</a></li>
+        <li><a href="./story/281.html">Light of the Buddha</a></li>
     </ol>
 
     <hr>
