--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -388,6 +388,7 @@
         <li><a href="./story/279.html">Can’t Bring Myself to Cut Your Head Off</a></li>
         <li><a href="./story/280.html">A Poem</a></li>
         <li><a href="./story/281.html">Light of the Buddha</a></li>
+        <li><a href="./story/282.html">Li Yuchun’s Lifelong Enemy</a></li>
     </ol>
 
     <hr>
