--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -389,6 +389,7 @@
         <li><a href="./story/280.html">A Poem</a></li>
         <li><a href="./story/281.html">Light of the Buddha</a></li>
         <li><a href="./story/282.html">Li Yuchun’s Lifelong Enemy</a></li>
+        <li><a href="./story/283.html">Master, Take Care</a></li>
     </ol>
 
     <hr>
