--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -390,6 +390,7 @@
         <li><a href="./story/281.html">Light of the Buddha</a></li>
         <li><a href="./story/282.html">Li Yuchun’s Lifelong Enemy</a></li>
         <li><a href="./story/283.html">Master, Take Care</a></li>
+        <li><a href="./story/283.html">Question and Answer</a></li>
     </ol>
 
     <hr>
