--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -392,6 +392,7 @@
         <li><a href="./story/283.html">Master, Take Care</a></li>
         <li><a href="./story/284.html">Question and Answer</a></li>
         <li><a href="./story/285.html">Unbreakable Diamond</a></li>
+        <li><a href="./story/286.html">Aspect of the Dharma</a></li>
     </ol>
 
     <hr>
