--- a/baoyu/story/33.html
+++ b/baoyu/story/33.html
@@ -100,7 +100,7 @@
 
 昌来与昌久并不懂为何要如此悲伤，阳忠与他们同感，但看昌择的反应，又知他经历过南山战，知道这位「开国」博士是个了不得的人物。
 
-时莫真山的灵柩出现在大街上，周围围绕的万千百姓尠[^2]不哭泣，昌择也为此而流泪，只有昌来等孩子并不体会到这件事的隆重。灵柩从市中心徐徐绕到南山大学的太阳教堂，此处就是莫先生最后的安息之地。
+时莫真山的灵柩出现在大街上，周围围绕的万千百姓尠不哭泣，昌择也为此而流泪，只有昌来等孩子并不体会到这件事的隆重。灵柩从市中心徐徐绕到南山大学的太阳教堂，此处就是莫先生最后的安息之地。
 
 南山国现任的总统，一位曹深则，出来作演讲，莫真山被安葬，葬礼就完毕。这一段经历在昌来的书里写了好几页，因为虽然他并不懂之，长周一游在他心中依然留下深刻的印象。
 
@@ -125,7 +125,6 @@
 ---
   
 [^1]: 读若安    
-[^2]: 同鲜（三声），为了不想与鲜（一声）混而用「甚少」异体。
 
 </div>
 
