--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -393,6 +393,8 @@
         <li><a href="./story/284.html">Question and Answer</a></li>
         <li><a href="./story/285.html">Unbreakable Diamond</a></li>
         <li><a href="./story/286.html">Aspect of the Dharma</a></li>
+        <li><a href="./story/287.html">The Wrathful Vajra</a></li>
+        <li><a href="./story/288.html">The Deal Five Centuries Ago</a></li>
     </ol>
 
     <hr>
