--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -401,7 +401,7 @@
 
     <p>
         <b>【 功 德 碑 】</b> <br>
-        Fear 貳拾 ❂ TendouKurou 肆 ❂ Laxarus 貳拾 
+        Fear 貳拾 ❂ TendouKurou 肆 ❂ Laxarus 貳拾 ❂ Aj Vj 肆
         <br><b>【 功 德 碑 】</b>
     </p>
 
