--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -395,6 +395,7 @@
         <li><a href="./story/286.html">Aspect of the Dharma</a></li>
         <li><a href="./story/287.html">The Wrathful Vajra</a></li>
         <li><a href="./story/288.html">The Deal Five Centuries Ago</a></li>
+        <li><a href="./story/289.html">Borrow Someone</a></li>
     </ol>
 
     <hr>
@@ -405,9 +406,8 @@
             <li>Fear 貳拾</li>
             <li>TendouKurou 肆</li>
             <li>Laxarus 貳拾</li>
-            <li>Aj Vj 肆</li>
+            <li>Aj Vi 肆</li>
         </ul>
-        <br><b>【 功 德 碑 】</b>
     </p>
 
     <footer>
