--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -396,6 +396,7 @@
         <li><a href="./story/287.html">The Wrathful Vajra</a></li>
         <li><a href="./story/288.html">The Deal Five Centuries Ago</a></li>
         <li><a href="./story/289.html">Borrow Someone</a></li>
+        <li><a href="./story/290.html">Is This a Relative’s Child?</a></li>
     </ol>
 
     <hr>
@@ -419,7 +420,7 @@
             Frankly I don't even have any site traffic analytics, which is something I probably <i>should</i> have, if I can be bothered. 
         </p> -->
         <p class="small">
-            Please enjoy this book. If you want to support me I have links in chapter footers.
+            Please enjoy this book. If you want to support me I have links in chapter footers. Rate this novel <a href="https://www.novelupdates.com/series/nightwatcher/">here</a>.
         </p> 
     </footer>
 
