--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -397,6 +397,7 @@
         <li><a href="./story/288.html">The Deal Five Centuries Ago</a></li>
         <li><a href="./story/289.html">Borrow Someone</a></li>
         <li><a href="./story/290.html">Is This a Relative’s Child?</a></li>
+        <li><a href="./story/291.html">A High-Key Entry</a></li>
     </ol>
 
     <hr>
