--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -398,6 +398,7 @@
         <li><a href="./story/289.html">Borrow Someone</a></li>
         <li><a href="./story/290.html">Is This a Relative’s Child?</a></li>
         <li><a href="./story/291.html">A High-Key Entry</a></li>
+        <li><a href="./story/292.html">The Power of the Masses</a></li>
     </ol>
 
     <hr>
