--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -399,6 +399,7 @@
         <li><a href="./story/290.html">Is This a Relative’s Child?</a></li>
         <li><a href="./story/291.html">A High-Key Entry</a></li>
         <li><a href="./story/292.html">The Power of the Masses</a></li>
+        <li><a href="./story/293.html">Buddhist Allegories</a></li>
     </ol>
 
     <hr>
