--- a/dagengren/story/291.html
+++ b/dagengren/story/291.html
@@ -407,7 +407,7 @@ The generals all rose abruptly to their feet.
 
 On the fifth step, the figure let out a soft sigh: 
 
-“*If the heavens birthed not Xu Ningyan, then all Jiuzhou will be night that never ends!”
+“*If the heavens birthed not Xu Ningyan, then all Jiuzhou will be night that never ends!*”
 
 Xu Xinnian was fucking furious.
 
