--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -400,6 +400,7 @@
         <li><a href="./story/291.html">A High-Key Entry</a></li>
         <li><a href="./story/292.html">The Power of the Masses</a></li>
         <li><a href="./story/293.html">Buddhist Allegories</a></li>
+        <li><a href="./story/294.html"><i>Mahayana</i></a></li>
     </ol>
 
     <hr>
