--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -401,6 +401,7 @@
         <li><a href="./story/292.html">The Power of the Masses</a></li>
         <li><a href="./story/293.html">Buddhist Allegories</a></li>
         <li><a href="./story/294.html"><i>Mahayana</i></a></li>
+        <li><a href="./story/295.html"><i>A New School of Thought</i></a></li>
     </ol>
 
     <hr>
@@ -412,6 +413,7 @@
             <li>TendouKurou 肆</li>
             <li>Laxarus 貳拾</li>
             <li>Aj Vi 肆</li>
+            <li>Laxarus 叄拾伍</li>
         </ul>
     </p>
 
