--- a/dagengren/story/294.html
+++ b/dagengren/story/294.html
@@ -26,7 +26,7 @@
 
 <div class="double" id="double">
 
-# 294X. *Mahayana*
+# 294. *Mahayana*
 
 “All things in the world have heart. If one holds compassion, and resonates with the hearts of all things, then why be restricted by the words of man?”
 
