--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -401,7 +401,7 @@
         <li><a href="./story/292.html">The Power of the Masses</a></li>
         <li><a href="./story/293.html">Buddhist Allegories</a></li>
         <li><a href="./story/294.html"><i>Mahayana</i></a></li>
-        <li><a href="./story/295.html"><i>A New School of Thought</i></a></li>
+        <li><a href="./story/295.html">A New School of Thought</a></li>
     </ol>
 
     <hr>
