--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -402,6 +402,7 @@
         <li><a href="./story/293.html">Buddhist Allegories</a></li>
         <li><a href="./story/294.html"><i>Mahayana</i></a></li>
         <li><a href="./story/295.html">A New School of Thought</a></li>
+        <li><a href="./story/296.html">I will not Kneel</a></li>
     </ol>
 
     <hr>
@@ -452,7 +453,7 @@
 
     ul.gongde {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         column-gap: 30pt;
         list-style-type: "❂  ";
     }   
