--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -403,6 +403,7 @@
         <li><a href="./story/294.html"><i>Mahayana</i></a></li>
         <li><a href="./story/295.html">A New School of Thought</a></li>
         <li><a href="./story/296.html">I will not Kneel</a></li>
+        <li><a href="./story/297.html">Luo Yuheng's Surprise</a></li>
     </ol>
 
     <hr>
