--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -404,6 +404,7 @@
         <li><a href="./story/295.html">A New School of Thought</a></li>
         <li><a href="./story/296.html">I will not Kneel</a></li>
         <li><a href="./story/297.html">Luo Yuheng's Surprise</a></li>
+        <li><a href="./story/298.html">Two Conversations</a></li>
     </ol>
 
     <hr>
