--- a/dagengren/story/297.html
+++ b/dagengren/story/297.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 297X. Luo Yuheng's Surprise
+# 297. Luo Yuheng's Surprise
 
 At the top of Stargazing Tower, the Jianzheng had unknowingly left the Bagua Platform and was now sharply watching the carving knife in Xu Qi’an's hand.
 
