--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -405,6 +405,7 @@
         <li><a href="./story/296.html">I will not Kneel</a></li>
         <li><a href="./story/297.html">Luo Yuheng's Surprise</a></li>
         <li><a href="./story/298.html">Two Conversations</a></li>
+        <li><a href="./story/299.html">Crimson Lettered Iron Deed</a></li>
     </ol>
 
     <hr>
