--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -406,6 +406,7 @@
         <li><a href="./story/297.html">Luo Yuheng's Surprise</a></li>
         <li><a href="./story/298.html">Two Conversations</a></li>
         <li><a href="./story/299.html">Crimson Lettered Iron Deed</a></li>
+        <li><a href="./story/300.html">To Attend a Gathering</a></li>
     </ol>
 
     <hr>
