--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -407,6 +407,7 @@
         <li><a href="./story/298.html">Two Conversations</a></li>
         <li><a href="./story/299.html">Crimson Lettered Iron Deed</a></li>
         <li><a href="./story/300.html">To Attend a Gathering</a></li>
+        <li><a href="./story/301.html">Fight and Scheme</a></li>
     </ol>
 
     <hr>
@@ -424,15 +425,8 @@
 
     <footer>
         <p class="small">
-            "Where are all the cookies banners?" You may (or may not) ask. There are no cookies, no ads, trackers, only book.
+            There are no ads or trackers on this site. Chapter comments are provided through GitHub using utteranc.es which may use its own cookies. You are free to not participate by not logging in with GitHub. Please enjoy this book. If you want to support me you will find a ko-fi link in chapter footers. Rate this novel <a href="https://www.novelupdates.com/series/nightwatcher/">here</a>.
         </p>
-
-        <!-- <p class="small">
-            Frankly I don't even have any site traffic analytics, which is something I probably <i>should</i> have, if I can be bothered. 
-        </p> -->
-        <p class="small">
-            Please enjoy this book. If you want to support me I have links in chapter footers. Rate this novel <a href="https://www.novelupdates.com/series/nightwatcher/">here</a>.
-        </p> 
     </footer>
 
 </div>
