--- a/dagengren/story/301.html
+++ b/dagengren/story/301.html
@@ -345,7 +345,7 @@ Everyone was stunned, completely taken aback by Xu Xinnian's decisiveness—he h
 
 "Everyone here is a witness. I'll take her to see the officials right now, and I hope you all will serve as witnesses."
 
-After speaking, Xu Xinnian glared at the purple-robed girl, his tone icy. "I won't be taking her to the Ministry of Justice or the prefecture office. I'll be taking her to the Nightwatchers Constabulary."
+After speaking, Xu Xinnian glared at the purple-robed girl, his tone icy. "I won't be taking her to the Ministry of Law or the prefecture office. I'll be taking her to the Nightwatchers Constabulary."
 
 Everyone's faces changed dramatically.
 
@@ -397,7 +397,7 @@ Xu Lingyue said: "Miss Wang has an extraordinary demeanor and handled the situat
 
 From start to finish, she had managed the situation, even though it had nothing to do with her. Her attitude of taking responsibility was commendable; she had the air of a leader.
 
-Xu Xinnian smirked. "That's only part of it. After you fell into the water, she didn’t let you change clothes at her estate. That was a display for both that brat from the Ministry of Justice, and for us.
+Xu Xinnian smirked. "That's only part of it. After you fell into the water, she didn’t let you change clothes at her estate. That was a display for both that brat from the Ministry of Law, and for us.
 
 "Lingyue, you deliberately fell into the water, didn't you?"
 
