--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -408,6 +408,8 @@
         <li><a href="./story/299.html">Crimson Lettered Iron Deed</a></li>
         <li><a href="./story/300.html">To Attend a Gathering</a></li>
         <li><a href="./story/301.html">Fight and Scheme</a></li>
+        <li><a href="./story/302.html">Treat Oneself Strictly</a></li>
+        <li><a href="./story/303.html">Frightening Bad Luck</a></li>
     </ol>
 
     <hr>
