--- a/dagengren/story/300.html
+++ b/dagengren/story/300.html
@@ -163,13 +163,13 @@ After taking a sip to moisten his throat, Xu Qi'an began speaking again, brimmin
 
 The Nightwatchers offered their thoughts, suggesting things like "no money" or "no prospects."
 
-Xu Qi'an shook his head and looked around at his colleagues' faces, before gravely saying, "It's being overly familiar too soon."
+Xu Qi'an shook his head and looked around at his colleagues' faces, before gravely saying, "Deep words without deep connections."
 
 What sort of logic was that? Hearing this, the Nightwatchers fell into contemplation.
 
 "And how does this relate to Lady Fuxiang being unable to leave you?" Zhu Guangxiao frowned.
 
-"When we first met, behind closed doors, she asked me…" Xu Qi'an put down his cup, his expression becoming serious and composed. He pronounced every word slowly and clearly: “‘Can you perform?’
+"When we first met, behind closed doors, she asked me…" Xu Qi'an put down his cup, his expression becoming serious and composed. He pronounced every word slowly and clearly: “‘Are you… able to?’
 
 “In the end, I proved I could. That’s why she can’t leave me.”
 
@@ -177,7 +177,7 @@ In the ensuing silence, Song Tingfeng expressed his skepticism: "I suspect you'r
 
 "That's normal. This isn't something the average person can grasp, especially men lacking the necessary... abilities." Xu Qi'an patted his shoulder and addressed the others, "I've told you the trick; whether you can comprehend it depends on your own insight."
 
-"Overly familiar too soon... whether you can perform..." Jiang Lyuzhong muttered to himself as he left, finding these two phrases straightforward on the surface but feeling there was a deeper, more elusive meaning behind them.
+"Deep words without deep connections... are you able to..." Jiang Lyuzhong muttered to himself as he left, finding these two phrases straightforward on the surface but feeling there was a deeper, more elusive meaning behind them.
 
 *Better ask Duke Wei about this. With his intelligence, he should be able to grasp this small secret instantly.*
 
@@ -189,7 +189,7 @@ After dismissing his colleagues, it wasn't long before a clerk arrived. "Silver 
 
 "Understood." The clerk departed.
 
-Before long, the two key phrases "overly familiar too soon" and "whether you can perform" spread throughout the Nightwatcher Constabulary. It was said that anyone who could grasp the deeper meaning behind these phrases would be able to visit the Jiaofangsi and sleep with an Oiran without paying.
+Before long, the two key phrases "deep words without deep connections" and "are you able to" spread throughout the Nightwatcher Constabulary. It was said that anyone who could grasp the deeper meaning behind these phrases would be able to visit the Jiaofangsi and sleep with an Oiran without paying.
 
 Don’t doubt it—this came from the mouth of Silver Gong Xu himself.
 
@@ -266,6 +266,7 @@ Her cries echoed through the courtyard like a pig being slaughtered.
 Basking in the warm spring sunshine, the carriage arrived at Wang manor.
 
 ...
+
 
 </div>
 
