--- a/dagengren/story/302.html
+++ b/dagengren/story/302.html
@@ -49,7 +49,7 @@ Jiang Lyuzhong nodded and didn’t ask further. Although the tea was good, he, b
 
 "Beauties love poetry, especially women of the night," Wei Yuan chuckled.
 
-"It’s not just that," Jiang Lyuzhong shook his head. “Besides poetry, he has two other secrets: 'Be familiar too soon' and 'Can you perform?' I've pondered these for a long time but gained no insights... Of course, it’s not that I want to become that kind of person, I’m just curious.
+"It’s not just that," Jiang Lyuzhong shook his head. “Besides poetry, he has two other secrets: 'Deep words without deep connections' and 'Are you able to?' I've pondered these for a long time but gained no insights... Of course, it’s not that I want to become that kind of person, I’m just curious.
 
 "With your vast knowledge, Duke Wei, both in celestial matters and earthly geography, I came especially to seek your guidance. Surely, with your wisdom, you understand it well."
 
