--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -410,6 +410,7 @@
         <li><a href="./story/301.html">Fight and Scheme</a></li>
         <li><a href="./story/302.html">Treat Oneself Strictly</a></li>
         <li><a href="./story/303.html">Frightening Bad Luck</a></li>
+        <li><a href="./story/304.html">Teammates that Makes One Feel Secure</a></li>
     </ol>
 
     <hr>
