--- a/dagengren/story/304.html
+++ b/dagengren/story/304.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 304. A Teammate that Makes One Feel Secure (Long)
+# 304. Teammates that Makes One Feel Secure (Long)
 
 “A large tomb?”
 
