--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -411,6 +411,7 @@
         <li><a href="./story/302.html">Treat Oneself Strictly</a></li>
         <li><a href="./story/303.html">Frightening Bad Luck</a></li>
         <li><a href="./story/304.html">Teammates that Makes One Feel Secure</a></li>
+        <li><a href="./story/305.html">In The Tomb</a></li>
     </ol>
 
     <hr>
