--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -412,6 +412,7 @@
         <li><a href="./story/303.html">Frightening Bad Luck</a></li>
         <li><a href="./story/304.html">Teammates that Makes One Feel Secure</a></li>
         <li><a href="./story/305.html">In The Tomb</a></li>
+        <li><a href="./story/306.html">Labyrinths and Reunions</a></li>
     </ol>
 
     <hr>
