--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -413,6 +413,7 @@
         <li><a href="./story/304.html">Teammates that Makes One Feel Secure</a></li>
         <li><a href="./story/305.html">In The Tomb</a></li>
         <li><a href="./story/306.html">Labyrinths and Reunions</a></li>
+        <li><a href="./story/307.html">Strangeness</a></li>
     </ol>
 
     <hr>
