--- a/dagengren/story/307.html
+++ b/dagengren/story/307.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 307X. Strangeness
+# 307. Strangeness
 
 Upon hearing the question, Qian You immediately perked up. He cleared his throat a few times to gather the attention of the gang members and announced, "Boss, everyone—I’ve brought reinforcements for us. Don’t worry; we’ll be out of here soon."
 
