--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -414,6 +414,7 @@
         <li><a href="./story/305.html">In The Tomb</a></li>
         <li><a href="./story/306.html">Labyrinths and Reunions</a></li>
         <li><a href="./story/307.html">Strangeness</a></li>
+        <li><a href="./story/308.html">You've Come</a></li>
     </ol>
 
     <hr>
