--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -416,6 +416,7 @@
         <li><a href="./story/307.html">Strangeness</a></li>
         <li><a href="./story/308.html">You've Come</a></li>
         <li><a href="./story/309.html">Surprise! The Owner of the Tomb Appears</a></li>
+        <li><a href="./story/310.html">Immortal Form</a></li>
     </ol>
 
     <hr>
