--- a/baoyu/story/19.html
+++ b/baoyu/story/19.html
@@ -25,6 +25,7 @@
     </div>
     
     <div class="double" id="double">
+
 # 道号梧桐（上）
 
 陆、廉两位师祖的船只继续前行，两者之间未再说话，众弟子也不敢出声。没想到不仅李国南方遭遇了袭击，他们遇到的另一队星府人也被魔修撞上了。刚开始还以为星府统一汪洋，没想到局势还这么乱，魔修还这么大胆。
@@ -47,7 +48,7 @@
 
 案上有一个茶壶，三个倒扣的茶杯，从火色琉璃的壶嘴蒸汽袅袅上升，升不过尺许就在阳光下消失。
 
-茶案旁站着一位黑白袍道士，手里捻着一盏仙茶。他的黑发以金簪挽起，脸面颇俊，却不算出众，岁数看似大概三十五六。望着灿烂阳光下的无尽汪洋，他眉间却有浓郁的担忧。
+茶案旁站着一位黑白袍道士，手里捻着一盏仙茶。他的黑发以金簪挽起，脸面颇俊，却不算出众，岁数看似大概四五十左右。望着灿烂阳光下的无尽汪洋，他眉间却有浓郁的担忧。
 
 「魔渊府越来越大胆了。」他开口道，话中残留着一丝上古中原方言的口音，只是因为在海上住着无数岁月，而淡化到难以察觉。
 
