--- a/baoyu/story/29.html
+++ b/baoyu/story/29.html
@@ -71,15 +71,36 @@
 
 自从到东海以来，阳忠才发现仙师真能等，那老者一动不动，宛如雕像，甚至呼吸都微乎其微。于是他也坐下来，闭目养神，只会偶尔与胡贞说一两句话。
 
-每几天都会有人出来，那老者都会淡淡说一声他们的名字，便不理人了。到了最后几天，胡、阳两人都没见到他们好友常仁番。很可能被选入他府了。
+每几天都会有人出来，那老者都会淡淡说一声他们的名字，便不理人了。他们对阳、胡来说都是陌生的，故顶多会行个礼，并无多话。
 
-阳忠并不注重谁会从山洞走出来，听到有人便会看一下，但也无动于衷，直到一日，忽然听到周边的弟子开始低语，听到了「诶，那是谁啊」、「那是什么人？」等话，刚要睁眼，却听闻老者道：「呵，长周郡吉安·司徒亚待·勒克莱尔，宗府认你入玄武府。」
+直到一旬多后他们才听到一个熟悉的名字。
+
+「金山郡余仙羽，宗府认你入玄武府。表现不错。」
+
+闻之，胡贞立刻转头，见到那个可恨的少女，翻了个白眼，便转回来，装作她不存在。
+
+阳忠要比胡贞内敛不少，不作声色地看了一眼，也不再搭理她。
+
+余仙羽轻盈盈地走到凉亭下，向钱长老及其余人施礼，甜甜道：「在下余仙羽，见过诸位师兄师姐。」
+
+有不少人还礼，阳忠也冷冷地举手，胡贞却依旧装作她不存在。余仙羽显然认识他们，但见两人都不想跟她谈话，便自己找一个角落，独自坐下来，一副老子不用你关心的态度。
+
+过了许久，胡贞欲要开口说话，阳忠却轻轻地摇了摇头，表示现在别乱发
+言。
+
+……
+
+到了最后几天，胡、阳两人都没见到他们好友常仁番。很可能被选入他府了。
+
+走出山洞的人大多都是生人，阳忠听到有人便会看一下，但也无动于衷，直到一日，忽然听到周边的弟子开始低语，听到了「诶，那是谁啊」、「那是什么人？」等话，刚要睁眼，却听闻老者道：「呵，长周郡吉安·司徒亚待·勒克莱尔，宗府认你入玄武府。」
 
 阳忠惊了一下，刷下睁眼，果然见到一个金发披散，面目憔悴，精疲力尽的司徒建。众人，胡贞在内，都目瞪口呆地看着他，此次竟然会有个西夷人，出乎所有人的预料。司徒建被众人盯着感觉很不舒服，但见到阳忠眼睛亮起，终于见到了一个熟悉的人。于是他朝阳忠走来，笑而行礼道：「原来阳师兄也在这啊，想必早就出来了吧。」
 
 众人目光刷地移向阳忠，后者内心很尴尬、外表却很自如，笑道：「恭喜司徒兄。嗯——」他用肘子戳了一下正愣着的胡贞，「这是我老乡兄弟胡贞，你且跟我们待着吧，常崎路应该快要关了。胡兄，这位是司徒建师兄。」
 
-「哦，原来是司徒师兄啊。」胡贞回过神，向司徒建行礼。没预料到阳忠竟认识这个西夷人，并且关系还不错。
+至于「老乡」余仙羽，自然被遗忘掉。
+
+「哦，原来是司徒师兄啊。」胡贞回过神，向司徒建行礼。没预料到阳忠竟认识这个西夷人，并且关系似乎不错。
 
 ……
 
@@ -117,7 +138,7 @@
 
 「哈哈哈，」这时旁观的老道笑了，嗓音嘶哑道：「姜贤弟何必自卑，在我们化神中你的刀法已经近乎无双。」
 
-姓姜名觉的中年人朝老道微笑了一下，自顾自地将偃月刀放入一套盔甲铁手中，道：「谢刘阳叔之言，可姜某的刀法还可完善。嗯，钱长老应该到了，带了不少弟子，三十六人，老祖是届要亲自主持吗？」
+姓姜名觉的中年人朝老道微笑了一下，自顾自地将偃月刀放入一套盔甲铁手中，道：「谢刘阳叔之言，可姜某的刀法还可完善。嗯，钱长老应该到了，带了不少弟子，嗯，三十六人，老祖是届要亲自主持吗？」
 
 只见姜觉彬彬有礼，对红裙安夜、旁观的老道甚为恭敬。
 
@@ -126,6 +147,7 @@
 「是，老祖。」姜觉躬身行礼，然后转身，一闪而到大厅之门，如唱歌剧般的吟诵：
 
 「府上有请，在岛执事皆赴武厅，开入门会！」
+
 
 </div>
 
