--- a/baoyu/story/30.html
+++ b/baoyu/story/30.html
@@ -94,6 +94,8 @@
 
 「江满。」安夜又道。只见下一个人向前走，过了一会被一个「金珍奇」执事收下。
 
+「余仙羽。」
+
 这样子的过程重复了几遍，轮到了胡贞。
 
 「胡贞。」安夜淡淡道。
@@ -171,6 +173,7 @@
 姜觉放下茶杯，从怀里取出两本书。
 
 「所以费话少说，先给你法术。」
+
 
 
 </div>
