--- a/baoyu/story/20.html
+++ b/baoyu/story/20.html
@@ -97,7 +97,7 @@
 
 周围没有他人，阳忠只能沿着湖边小道前行，一边享受四周的美景，一边往那亭子去。此湖说小不小，说大不大，一盏茶功夫阳忠就走过其大半，沿着前方的木桥往湖中亭子走。
 
-在这距离，他能见亭里有两人，一人黑道袍带白边，一个鲜红长裙在微风里漂浮，似是一男一女。又走数十丈，能见到两人的面目，男女都似是偏年轻些的中年人，男人较为普通，却笑眯眯的，显得很和蔼，女人美色惊人，却矜持地喝着茶，显得颇为冷漠。
+在这距离，他能见亭里有两人，一人黑道袍带白边，一个鲜红长裙在微风里漂浮，似是一男一女。又走数十丈，能见到两人的面目，男女都似是中年人，男人较为普通，却笑眯眯的，显得很和蔼，女人美色惊人，却矜持地喝着茶，显得颇为冷漠。
 
 他们坐在一个小木桌边，桌上摆放着一壶茶，两个茶杯，一杯是黑白袍男人的，一杯只能是为阳忠而倒的。阳忠忐忑地来到两人面前，深深行礼，郎声道：「弟子阳忠见过宗府主，见过……前辈。」
 
@@ -146,6 +146,7 @@
 阳忠听得似懂非懂，愣了一会才回过神，试探道：「那，弟子可能是阳邑某家的后裔。」
 
 姜府主对他笑了一下，笑到眯眼，阳忠忽然感觉仿佛太阳强了一点，洒下灿烂温暖的光芒。姜府主道：「贫道倒是另有想法，然需要先验证一下再告诉你。得看看我们星府的特招令是否妄赐的。来，会弹琴吗？」
+
 
     </div>
 
