--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -418,6 +418,7 @@
         <li><a href="./story/309.html">Surprise! The Owner of the Tomb Appears</a></li>
         <li><a href="./story/310.html">Immortal Form</a></li>
         <li><a href="./story/311.html">The Information Load is so Large, Brain Bluescreened</a></li>
+        <li><a href="./story/312.html">Truly a Divine Man</a></li>
     </ol>
 
     <hr>
