--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -419,6 +419,7 @@
         <li><a href="./story/310.html">Immortal Form</a></li>
         <li><a href="./story/311.html">The Information Load is so Large, Brain Bluescreened</a></li>
         <li><a href="./story/312.html">Truly a Divine Man</a></li>
+        <li><a href="./story/313.html">Information for Medicine</a></li>
     </ol>
 
     <hr>
