--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -420,6 +420,7 @@
         <li><a href="./story/311.html">The Information Load is so Large, Brain Bluescreened</a></li>
         <li><a href="./story/312.html">Truly a Divine Man</a></li>
         <li><a href="./story/313.html">Information for Medicine</a></li>
+        <li><a href="./story/314.html">Xu Cijiu can Write Poetry? Pah!</a></li>
     </ol>
 
     <hr>
